--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "issues": "https://github.com/inanepain"
     },
     "keywords": [
-        "inane",
+        "inanepain",
+        "library",
         "config"
     ],
     "autoload": {
@@ -35,5 +36,35 @@
     "require": {
         "php": ">=8.1"
     },
-    "require-dev": {}
+    "require-dev": {},
+    "scripts": {
+        "mk-doc-dir": [
+            "mkdir -p doc/{changelog,readme}",
+            "mkdir doc/changelog/release",
+            "mkdir doc/readme/part",
+            "touch doc/{changelog,readme}/index.adoc",
+            "touch doc/changelog/release/0.0.0.adoc",
+            "touch doc/readme/part/install.adoc"
+        ],
+        "build": [
+            "@build-changelog",
+            "@build-readme"
+        ],
+        "build-changelog": [
+            "rm -f CHANGELOG.adoc",
+            "asciidoctor-reducer -o CHANGELOG.adoc doc/changelog/index.adoc",
+            "asciidoctor -b docbook CHANGELOG.adoc",
+            "rm -f CHANGELOG.md",
+            "pandoc -f docbook -t markdown_strict CHANGELOG.xml -o CHANGELOG.md",
+            "rm -f CHANGELOG.xml"
+        ],
+        "build-readme": [
+            "rm -f README.adoc",
+            "asciidoctor-reducer -o README.adoc doc/readme/index.adoc",
+            "asciidoctor -b docbook README.adoc",
+            "rm -f README.md",
+            "pandoc -f docbook -t markdown_strict README.xml -o README.md",
+            "rm -f README.xml"
+        ]
+    }
 }
