--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
     "scripts": {
         "mk-doc-dir": [
             "mkdir -p doc/{changelog,readme}",
-            "mkdir doc/changelog/release",
-            "mkdir doc/readme/part",
+            "mkdir -p doc/changelog/release",
+            "mkdir -p doc/readme/part",
             "touch doc/{changelog,readme}/index.adoc",
             "touch doc/changelog/release/0.0.0.adoc",
             "touch doc/readme/part/install.adoc"
