config - changed readme from md to adoc.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "Unlicense",
     "homepage": "https://github.com/inanepain/config",
-    "readme": "README.md",
+    "readme": "README.adoc",
     "authors": [
         {
             "name": "Philip Michael Raab",
