--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
             "touch doc/readme/part/install.adoc"
         ],
         "build": [
+            "echo \"Library: inanepain/$(basename $(pwd))\"",
             "echo build: all...",
             "@build-changelog",
             "@build-readme",
